# gameserver

./: .gitignore  Cargo.toml  DESIGN.md  README.md
client/: Cargo.toml
client/src/: lib.rs
core/: Cargo.toml
core/src/: entity.rs  gamemode.rs  input.rs  lib.rs  map.rs  physics.rs  world.rs
docs/: index.html  style.css
game/MOBA/: Cargo.toml  README.md
game/MOBA/src/: main.rs  moba.rs
game/MOBA/www/: client.js  index.html
server/: Cargo.toml
server/src/: main.rs
server/src/modes/: basketball.rs  moba.rs  mod.rs  soccer.rs
