[package]
name = "gameserver-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
gameserver-core = { path = "../core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = "0.3"

[lib]
crate-type = ["cdylib"]
name = "gameserver_client"
path = "src/lib.rs"
