[package]
name = "gameserver"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
gameserver-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
webrtc = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "gameserver"
path = "src/main.rs"
